--- a/Algorithm/Algorithm.vcxproj.filters
+++ b/Algorithm/Algorithm.vcxproj.filters
@@ -48,5 +48,11 @@
     <ClCompile Include="queue_linkedlist.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="deque.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="queue_maze.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
